--- a/CtEscQuebradaAzul.html
+++ b/CtEscQuebradaAzul.html
@@ -51,7 +51,7 @@
 <div class="container contact-box">
   
   <h1>Institución</h1>
-  <img src="Img/EQALogo.png" alt="" width="100" style="margin-top:-95px;margin-left:235px"/>
+  <img align="right" src="Img/EQALogo.png" alt="" width="100" style="margin-top:-95px;"/>
   <br />
   <hr style="border: 1.3px solid black;width:300px;"/>
   <div class="contact-info">
