--- a/CtEscQuebradaAzul.html
+++ b/CtEscQuebradaAzul.html
@@ -8,12 +8,12 @@
   body {
     font-family: Arial, sans-serif;
     background-color: #005f5f;
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
   }
   .container {
-    max-width: 800px;
-    margin: 20px auto;
+    max-width: 400px;
+    margin: 0 auto;
     padding: 20px;
     background-color: #fff;
     border-radius: 10px;
@@ -37,7 +37,7 @@
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
-    margin: 20px;
+    margin: 0 auto;
     background-color: #A0E9E9;
     border: 5px solid #004E4E;
   }
@@ -48,16 +48,17 @@
 </style>
 </head>
 <body style="animation: start 0.9s">
+<br>
 <div class="container contact-box">
   
-  <h1>Institución</h1>
+  <h1 style="margin-left: 0;">Institución</h1>
   <img align="right" src="Img/EQALogo.png" alt="" width="100" style="margin-top:-95px;"/>
   <br />
   <hr style="border: 1.3px solid black;width:300px;"/>
   <div class="contact-info">
       
     <p><strong style="text-align:center;font-size:28px">Escuela Quebrada Azul</strong></p>
-    <p><strong>Código:</strong> 0686 &nbsp;&nbsp;<strong>Circuito:</strong> 06</p>
+    <p><strong>Código:</strong> 0686 &nbsp;&nbsp;&nbsp;<strong>Circuito:</strong> 06</p>
     <p><strong>Dirección regional:</strong> Puriscal</p>
     <p><strong>Email:</strong> esc.quebradaazul@mep.go.cr</p>
     <p><strong>Dirección:</strong> 500 Mts. Oeste del salón comunal de Quebrada Azul.</p>
