--- a/TestAdmiTEC2025/index.html
+++ b/TestAdmiTEC2025/index.html
@@ -9,13 +9,13 @@
 </head>
 
 <body>
-    <h1>Simulacro de prueba de admisión académica TEC 2025</h1>
+    <h1 class="title">Simulacro de prueba de admisión académica TEC 2025</h1>
 
     <div class="content" id="content">
 
     </div>
 
-    <h1>Desarrollado por Ignacio Apuy | 2025</h1>
+    <h1>Desarrollado por <a href="https://instagram.com/ignacio.apuy">Ignacio Apuy</a> | 2025</h1>
 
     <div class="evaluation hidden">
         <button id="sendButton">Revisar</button>
